<resources>
    <string name="app_name">Premiere</string>
    <string name="movie_name">Avatar</string>
    <string name="summary">A paraplegic Marine dispatched to the moon Pandora \n on a unique mission
        becomes torn between following his orders and protecting the world
        he feels is his home.</string>
    <string name="order_tickets">Order Tickets</string>
    <string name="tickets_amount">Select Tickets Amount</string>
    <string name="total_price_format">Total Price: %1$d $</string>
    <string name="ticket_type">Choose Ticket Type</string>
    <string name="adult">Adult (15$) </string>
    <string name="child">Child (10$) </string>
    <string name="choose_date">Choose A Date</string>
    <string name="date_label">Viewing Date:</string>
    <string name="choose_date_button">Select Date</string>
    <string name="no_date_selected">No Date Selected</string>
    <string name="checkbox_3d">3D Experience (+3$)</string>
    <string name="cinema_label">Choose A Cinema:</string>
    <string name="cinema_hint">Type Cinema Location  </string>
    <string name="get_tickets_button">Get Tickets</string>
    <string name="dialog_title">Order Summary</string>
    <string name="button_confirm">Confirm Purchase</string>
    <string name="button_cancel">Cancel</string>
    <string name="order_success">Order placed successfully! Enjoy the movie.</string>
    <string name="order_error">Please select at least 1 ticket.</string>
    <string name="order_details_template">
        Movie: %1$s \n
        Date: %2$s \n
        Cinema: %3$s \n
        Tickets: %4$d (%5$s) \n
        Change To 3D: %6$s \n
        Total Price: %7$d $ \n
</string>
</resources>