<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/play_white_logo">

            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/dialog_order_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_details_template"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:lineSpacingExtra="5dp"/>

        <Button
            android:id="@+id/dialog_confirm_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/button_confirm"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:padding="15dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/dialog_cancel_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:backgroundTint="#CCCCCC"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:padding="15dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

